Server side testing (#24)